2012-02-02  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: Implemented support for treating several
	input files as if they they had been concatenated binarily into a
	single big input file. Snytax is "mkvmerge -o out.mkv ( in1.ts
	in2.ts in3.ts )". This feature has already been present since
	version 5.1.0 but never been mentioned in the ChangeLog. Support
	for this feature in mmg is still missing.

2012-01-31  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Blocks with "BlockAdditions" will no longer
	be muxed as "SimpleBlock" elements discarding the additions but
	instead as "BlockGroup" elements. This applies to e.g. WAVPACK4
	tracks with correction files as the correction data is stored in
	"BlockAdditions". Fix for bug 713.

	* mkvmerge: bug fix: Fixed some more issues with (E)AC3 being
	misdtected as AVC elementary streams.

2012-01-27  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: The header editor was sometimes creating two
	instances of an element if an element was added to the second or
	one of the later tracks. Fix for bug 711.

	* mkvpropedit, mmg: bug fix: Trying to modify a file located in a
	path mounted with GVFS SFTP will no longer crash the
	programs. Instead an error message is output if an error
	occurs. Fix for bug 710.

2012-01-25  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed integer underflows in the read caching
	code resulting in invalid memory access. Happened in broken or
	incomplete files only. Fix for bug 709.

2012-01-23  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Appending AVI, Matroska or MPEG program
	stream files with DTS audio tracks will not result in a warning
	that the appended DTS tracks might not be compatible. Fix for bug
	705.

2012-01-13  Moritz Bunkus  <moritz@bunkus.org>

	* mkvextract: bug fix for the "timecodes_v2" mode: mkvextract will
	write one more timecode than there are frames in the file. The