@@ -179,3 +179,4 @@ T_330dts_detection:38c941b579418e6c874950f4c55f84ce:passed:20120107-210130:1.227
 T_331read_buffer_underflow:3bdec07b9e45cafe2c35561e7f8ad2db:passed:20120125-232902:0.407400904
 T_332eac3_misdetected_as_avc:b4e0ac5954dbf57e4ad941f01c7de462:passed:20120131-145550:0.452730804
 T_333wavpack_with_correction:c561a04a67042b048f7059a80d1c366d-e33897409384ca5fd8ed5e497f8c3883+37f802510b43b2ab4bd7d8356a7ac606-ok:passed:20120131-164845:0.299865433
+T_334mp4_audio_encoder_delay:2afe7b533c9f1ed35168e60aaca20dff:passed:20120206-100443:0.195628019
