@@ -1,0 +1,6 @@
+#!/usr/bin/ruby -w
+
+# T_334mp4_audio_encoder_delay
+describe "mkvmerge / MP4 files & audio encoder delay information"
+
+test_merge "data/mp4/aac_encoder_delay_sample.m4a"
